# brain_vault

./: .gitignore  README.md  ai_brain_vault_srs.md  docker-compose.yml  system_design.md  test_short_note.py
backend/: .dockerignore  Dockerfile  add_name_to_users.py  check_dedupe.py  check_doc_owner.py  check_env_debug.py  check_mcp.py  check_memories.py  check_postgres.py  debug_agent_log.txt  debug_detailed_fetch.py  debug_discovery.py  debug_error_repro.py  debug_lang_fallback.py  debug_library_capabilities.py  debug_login.py  debug_model.py  debug_output.txt  debug_pinecone.py  debug_pydantic.py  debug_read_init.py  debug_redis.py  debug_token.py  debug_version.py  debug_youtube.py  debug_youtube_isolation.py  dedupe_results.txt  docker-compose.yml  find_agent_executor.py  fix_bom.py  fix_env.py  force_env_update.py  init_db.py  inspect_db.py  inspect_langchain.py  langchain_debug.txt  list_models.py  mcp_server.py  migrate_memories.py  migrate_postgres.py  (+16 more)
backend/app/: celery_app.py  main.py  worker.py
backend/app/api/: deps.py
backend/app/core/: config.py  encryption.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  audit.py  chat.py  client.py  cluster.py  document.py  feedback.py  history.py  memory.py  user.py
backend/app/routers/: auth.py  chat_api.py  documents.py  export.py  feedback.py  inbox.py  ingest.py  llm.py  llm_api.py  memory.py  prompts.py  retrieval.py  settings.py  user_keys.py  ws.py
backend/app/schemas/: client.py  document.py  llm.py  memory.py  user.py
backend/app/services/: agent_service.py  context_builder.py  dedupe_job.py  ingestion.py  llm_service.py  memory_service.py  metadata_extraction.py  retrieval_service.py  vector_store.py  web_ingestion.py  websocket.py  youtube_service.py
backend/app/tests/: conftest.py  test_auth.py  test_rag_pipeline.py
backend/scripts/: add_tags_column.py  debug_persistence.py  dom_health_check.py  evaluate_rag.py  migrate_rag_v1.py
backend/test_scripts/: create_user.py  debug_db.py  debug_docs.py  debug_forensics.py  debug_hash.py  debug_inbox.py  debug_latest.py  debug_settings_live.py  debug_user.py  debug_users.py  debug_vector.py  reset_password.py  test_isolation_dedupe.py  test_mcp_direct.py  test_mcp_live.py  test_mcp_retrieve.py  test_mcp_tools.py  verify_auto_approve.py  verify_extension_save.py  verify_inbox_settings.py  verify_mcp.py  verify_mcp_auth.py  verify_mcp_memory.py  verify_notifications.py  verify_rag_basic.py  verify_universal_memory.py
backend/tests/: check_backend_e2e.py
(+66 files in other folders)
